# focus-detector-qt

./: CMakeLists.txt  DEMO.md  README.md  build_package.sh  cpack_build.sh  focusmanager.cpp  focusmanager.h  focuswindow.cpp  focuswindow.h  main.cpp  quick_build.sh  test_package.sh
debian/: README.Debian.ex  README.source.ex  control  debhelper-build-stamp  files  focus-detector-qt.cron.d.ex  focus-detector-qt.desktop  focus-detector-qt.substvars  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  rules.backup  watch.ex
debian/.debhelper/focus-detector-qt/: dbgsym-build-ids
debian/.debhelper/focus-detector-qt/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/focus-detector-qt/dbgsym-root/usr/share/doc/: focus-detector-qt-dbgsym
debian/focus-detector-qt/DEBIAN/: control  md5sums
debian/focus-detector-qt/usr/share/doc-base/: focus-detector-qt.focus-detector-qt
debian/focus-detector-qt/usr/share/doc/focus-detector-qt/: copyright
debian/upstream.ex/: metadata.ex
